# WaiHus

./: package-lock.json
backend/: .gitignore  Cargo.toml  README.md  database.py  db.js  go.mod  index.js  main.go  main.py  package.json  schemas.py
backend/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: Chart.vue  NavBar.vue
