[package]
name = "waihus-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cores = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11.8"
